--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-picker/picker": "2.11.1",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/drawer": "^7.5.3",
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.1.14",
